<resources>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_send_notification">Send Notification</string>
    <string name="lbl_post">Post</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_buy">Buy</string>
    <string name="lbl_set_password">Set Password</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_view">View</string>
    <string name="lbl_responed">Respond</string>
    <string name="lbl_waitingforResponse">Waiting for response</string>
    <string name="lbl_resend"><u>Resend</u></string>
    <string name="lbl_create_account"><u>Create new account</u></string>
    <string name="lbl_create_account_with_link"><u>Create new account through invited link</u></string>
    <string name="lbl_title_forgot_password">Forgot Password</string>
    <string name="lbl_title_verify_mobile">Mobile Number</string>
    <string name="lbl_select_company">Select Company</string>
    <string name="lbl_create_an_account">Create an account</string>
    <string name="lbl_personal_details">Personal Details</string>
    <string name="lbl_company_details">Company Details</string>
    <string name="lbl_select_seller">Select Seller</string>
    <string name="lbl_select_importer">Select Importer</string>
    <string name="lbl_select_exporter">Select Exporter</string>
    <string name="lbl_seller_directory">Seller directory</string>
    <string name="lbl_exporter_directory">Exporter directory</string>
    <string name="lbl_importer_directory">Importer directory</string>
    <string name="lbl_select_buyer">Select Buyer</string>
    <string name="lbl_add_broker">Add Broker</string>
    <string name="lbl_deals">Deals</string>
    <string name="lbl_seller_name">Seller Name</string>
    <string name="lbl_rupees_symbol">\u20B9 40000</string>
    <string name="lbl_rupees_symbol_only">$</string>
    <string name="lbl_title_verify_otp">Verify OTP</string>
    <string name="lbl_send_otp">Send OTP</string>
    <string name="lbl_contract_verify">Are you sure you want to verify this contracts</string>
    <string name="lbl_login_as">Login as</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_confrim_password">Confirm Password</string>
    <string name="lbl_post_to_sell">Post To Sell</string>
    <string name="lbl_post_to_export">Post To Export</string>
    <string name="lbl_post_to_buy">Post To Import</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_private_sell">Private Export</string>
    <string name="lbl_private_buy">Private Import</string>
    <string name="lbl_private_export">Private Export</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_edit_personal_detail">Edit personal details</string>
    <string name="edit_company_detail">Edit Company Detail</string>
    <string name="type">Type</string>
    <string name="mill_reg_number">Mill reg number</string>
    <string name="mill_reg_date">Mill/Registration Date</string>
    <string name="registration_as">Registration as</string>
    <string name="station_name">Station Name</string>
    <string name="update">Update</string>
    <string name="turnover_in_crore">Tornover in crore(rs.)</string>
    <string name="lbl_contact_person">Contact Person Name</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_company_name">Name Of Company</string>
    <string name="lbl_company">Company</string>
    <string name="lbl_gst_number">GST Number</string>
    <string name="lbl_iec_number">IEC number</string>
    <string name="lbl_buyer_seller">Buyer / Seller</string>
    <string name="lbl_buyer">Importer</string>
    <string name="lbl_broker">Broker</string>
    <string name="lbl_referral_code">Referral Code</string>
    <string name="lbl_primary_broker">Primary Broker</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_add_company">Add Company</string>
    <string name="lbl_uhml">UHML(mm)</string>
    <string name="lbl_mic">MIC</string>
    <string name="lbl_rd">RD</string>
    <string name="lbl_cg">CG</string>
    <string name="lbl_trash">Trash</string>
    <string name="lbl_moisture">Moisture</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_buy_bales">Buy Bales</string>
    <string name="lbl_de">D/E</string>
    <string name="lbl_state">State</string>
    <string name="lbl_district">District</string>
    <string name="lbl_station">Station</string>
    <string name="lbl_search_seller">Search Exporter</string>
    <string name="lbl_search_buyer">Search Importer</string>
    <string name="lbl_seller_type">Seller Type</string>
    <string name="lbl_pending">Pending...</string>
    <string name="lbl_dollar">$ 1200</string>
    <string name="lbl_dollar_only">$</string>
    <string name="lbl_country_of_dispatch">Country of dispatch</string>
    <string name="lbl_port_of_dispatch">Port of dispatch</string>
    <string name="lbl_destination_country">Destination country</string>
    <string name="lbl_destination_port">Destination port</string>
    <string name="err_min_text">Minimum</string>
    <string name="err_max_text">Maximum</string>
    <string name="err_character_required">characters required.</string>
    <string name="err_enter_mobile_number">Please enter mobile number</string>
    <string name="err_enter_email_number">Please enter email</string>
    <string name="err_enter_email_format">Please Enter Proper Email Format</string>
    <string name="err_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="err_enter_valid_iec_number">Please enter valid iec number</string>
    <string name="err_enter_password">Please enter password</string>
    <string name="err_password_contain_character">Password should contain atleast %d characters</string>
    <string name="err_name_character">Name should contain atleast %d characters</string>
    <string name="err_company">Company Name should contain atleast %d characters</string>
    <string name="err_enter_new_password">Please enter new password</string>
    <string name="err_enter_confirm_password">Please enter confirm password</string>
    <string name="err_password_not_match">Password and confirm password does not matched</string>
    <string name="err_primary_broker">Please Enter Primary Broker</string>
    <string name="err_email">Please Enter Email</string>
    <string name="err_referral">Please Enter Referral Code</string>
    <string name="err_gst">Please Enter GST Number</string>
    <string name="err_email1">Email should contain atleast %d charactersl</string>
    <string name="err_referral_code">Referral Code should contain atleast %d charactersl</string>
    <string name="err_gst_number">GST should contain atleast %d charactersl</string>
    <string name="err_password">Password should contain atleast %d charactersl</string>
    <string name="err_company_name">Please Enter Company Name</string>
    <string name="err_iec_number">Please Enter IEC Number</string>
    <string name="utilities_title">Utilities</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_edit_company_details">Edit Company Details</string>
    <string name="buyer_directory">Buyer directory</string>
    <string name="mcx">MCX</string>
    <string name="calculator">Calculator</string>
    <string name="news">News</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_select_product">Select Product</string>
    <string name="lbl_select_state">Select State</string>
    <string name="lbl_select_coutnry">Select Countries</string>
    <string name="lbl_select_value">Select Value</string>
    <string name="lbl_please_fill_detail">Please fill all company <u><font color='#69BA53'>details \n to proceed</font></u></string>
    <string name="buyerdirectory">Buyer Directory</string>
    <string name="companyname">Trident Ltd</string>
    <string name="address">Address :</string>
    <string name="lbl_address">Address</string>
    <string name="port">Port</string>
    <string name="country">Country</string>
    <string name="contact">(111)234 323 2323</string>
    <string name="mcxtitle">MCX</string>
    <string name="cotton">Cotton</string>
    <string name="price">Price</string>
    <string name="date">22 oct 2090</string>
    <string name="fut">FUT</string>
    <string name="up_down">Up/Down</string>
    <string name="Open">Open</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="prev_close">Prev.close</string>
    <string name="calculatortitle">Calculator</string>
    <string name="tab_ginning">Ginning</string>
    <string name="tab_spinning">Spinning</string>
    <string name="tab_exports">Exports</string>
    <string name="kapas">Kapas</string>
    <string name="expenses">Expenses</string>
    <string name="cotton_seed">Cotton Seed</string>
    <string name="our_turn">Our Turn</string>
    <string name="shortage">Shortage</string>
    <string name="cost_of_cotton">Cost Of cotton</string>
    <string name="rs_per_kg">Rs/20 kg</string>
    <string name="rs_kg">Rs/kg</string>
    <string name="rs_per_candy">Rs/Candy</string>
    <string name="yarn_count">Yarn Count</string>
    <string name="cotton_rate">Cotton Rate</string>
    <string name="yield">Yield</string>
    <string name="waste_recovery">Waste Recovery</string>
    <string name="conversion_cost">Conversion Cost</string>
    <string name="yarn_cost">Yarn Cost</string>
    <string name="rs_k_count">Rs/K\n/Count</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="usd_inr">USD/INR</string>
    <string name="export_rate">Export Rate</string>
    <string name="cents_per_bales">Cents/Bales</string>
    <string name="news_feed">News Feed</string>
    <string name="news_time">2h ago</string>
    <string name="newslines">Global warming is a hike in the average global temperature on earth.
        Burning of excess fossil fuel and the release of toxic fumes into the atmosphere
        is the major cause behind global warming. Global warming can
        have disastrous effects on living organisms. The impacts of global warming are
        widespread and unspecific</string>
    <string name="notification_channel_id">E Cotton</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_work">My work</string>
    <string name="report">Report</string>
    <string-array name="status">
        <item>Active</item>
        <item>Completed</item>
    </string-array>
    <string name="date_range">Date Range</string>
    <string name="seller_wise">Exporter Wise</string>
    <string name="broker_wise">Broker Wise</string>
    <string name="product_wise">Product Wise</string>
    <string name="company_name">Company Name</string>
    <string name="filter">Filter</string>
    <string name="time_duration">By time duration</string>
    <string name="weekly">Weekly</string>
    <string name="tab_company_detail">Company Details</string>
    <string name="locationdetail">Location Details</string>
    <string name="station">Station</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="bank_details">Bank Details</string>
    <string name="gst_number">GST Number</string>
    <string name="pan_number">PAN Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="branch_addresh">Branch Address</string>
    <string name="ifsc_code">IFSC Swift Code</string>
    <string name="stamp">Stamp</string>
    <string name="lbl_pan_of_company">Pan of company</string>
</resources>