<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_companydetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp">

                <TextView
                    android:id="@+id/tv_companydetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/tab_company_detail"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_companydetails"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/type"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_type"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_companypan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_user_type"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/lbl_pan_of_company"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_pan_of_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_companypan"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_locationdetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_pan_of_company"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/locationdetail"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_station"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_locationdetails"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/station"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_station"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_district"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_station_name"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/district"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_district_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_district"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_district_name"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/state"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_state_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_state"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_state_name"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/lbl_address"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_address"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_bankdetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_address"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/bank_details"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/tv_gstnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_bankdetails"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/gst_number"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_gst_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_gstnumber"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_pan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_gst_number"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/pan_number"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_pan_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_pan"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_pan_number"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/bank_name"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_bank_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_bank"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_holdername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_bank_name"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/account_holder_name"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_account_holder_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_holdername"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_br_addresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_account_holder_name"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/branch_addresh"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_branch_Address"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_br_addresh"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_ifsc_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_branch_Address"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/ifsc_code"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_ifsc_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_ifsc_code"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_stamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_ifsc_number"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    android:text="@string/stamp"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/img_stamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_stamp"
                    android:layout_alignStart="@id/tv_stamp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/stamp" />


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>